force-app/main/default/objects/copado__Personal_Settings__c/copado__Personal_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This object stores the personal settings for Copado</description>
    <label>Personal Settings</label>
</CustomObject>