force-app/main/default/objects/copado__Personal_Settings__c/fields/copado__AccessStatusColumn__c.field-meta.xml
<CustomField>
    <fullName>copado__AccessStatusColumn__c</fullName>
    <inlineHelpText>Options are either &quot;dropdown&quot; or &quot;images&quot;</inlineHelpText>
    <label>AccessStatusColumn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>