force-app/main/default/objects/copado__Personal_Settings__c/fields/copado__API_Key__c.field-meta.xml
<CustomField>
    <fullName>copado__API_Key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>