force-app/main/default/objects/copado__Personal_Settings__c/fields/copado__Build_Task_Rows__c.field-meta.xml
<CustomField>
    <fullName>copado__Build_Task_Rows__c</fullName>
    <defaultValue>5</defaultValue>
    <inlineHelpText>This value determines the number of build task rows that should be displayed when viewing a Continuous Integration.</inlineHelpText>
    <label>Build Task Rows</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>