force-app/main/default/objects/copado__Personal_Settings__c/fields/copado__DeployConnectionBox_height__c.field-meta.xml
<CustomField>
    <fullName>copado__DeployConnectionBox_height__c</fullName>
    <defaultValue>80</defaultValue>
    <label>DeployConnectionBox height</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>