force-app/main/default/objects/copado__Personal_Settings__c/fields/copado__DeployConnectionBox_width__c.field-meta.xml
<CustomField>
    <fullName>copado__DeployConnectionBox_width__c</fullName>
    <defaultValue>70</defaultValue>
    <label>DeployConnectionBox width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>