force-app/main/default/objects/copado__Personal_Settings__c/fields/copado__Disable_Auto_Resolve__c.field-meta.xml
<CustomField>
    <fullName>copado__Disable_Auto_Resolve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables Auto-Resolve from Online Conflict Resolution</description>
    <inlineHelpText>Disables Auto-Resolve from Online Conflict Resolution</inlineHelpText>
    <label>Disable Auto-Resolve</label>
    <type>Checkbox</type>
</CustomField>