force-app/main/default/objects/copado__Personal_Settings__c/fields/copado__Disable_Re_Create_Feature_Branch_in_US__c.field-meta.xml
<CustomField>
    <fullName>copado__Disable_Re_Create_Feature_Branch_in_US__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Re-Create Feature Branch in US</label>
    <type>Checkbox</type>
</CustomField>