force-app/main/default/objects/copado__Personal_Settings__c/fields/copado__MaskApiKey__c.field-meta.xml
<CustomField>
    <fullName>copado__MaskApiKey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default is false to maintain compatibility. Only if the user changes it to true the API Key will be masked or replaced by a placeholder.</description>
    <label>Mask API Key</label>
    <type>Checkbox</type>
</CustomField>