force-app/main/default/objects/copado__Personal_Settings__c/fields/copado__Minimum_Logging_Level__c.field-meta.xml
<CustomField>
    <fullName>copado__Minimum_Logging_Level__c</fullName>
    <description>Minimum log level for copado processes. 0: TRACE, 1: DEBUG, 2: INFO, 3: WARN, 4: ERROR
Temporarily lower this value to get better information in the Result Objects when troubleshooting/developing a Multi-Cloud solution</description>
    <label>Minimum Logging Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>